# enum-newtype

./: Cargo.toml  README.md
macro/: Cargo.toml
macro/src/: derive.rs  error.rs  lib.rs  utils.rs
src/: lib.rs
