[package]
name = "enum-newtype"
version = "0.1.0"
documentation = "https://docs.rs/enum-newtype/"
description = "Proc. macro to turn any enum into an enum of newtypes."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[workspace.package]
authors = ["Robin Freyler <robin.freyler@gmail.com>"]
repository = "https://github.com/robbepop/enum-newtype"
edition = "2021"
readme = "README.md"
license = "MIT"
keywords = ["enum", "pattern", "new-type", "newtype"]
categories = ["data-structures", "no-std"]

[dependencies]
enum-newtype-macro = { version = "0.1.0", path = "macro" }

[dev-dependencies]
trybuild = { version = "1.0.60", features = ["diff"] }

[workspace]
members = ["macro"]
