[package]
name = "enum-newtype-macro"
version = "0.1.0"
documentation = "https://docs.rs/enum-newtype-macro/"
description = "Proc. macro implementation for the `enum-newtype` crate."
authors.workspace = true
repository.workspace = true
edition.workspace = true
readme.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.0", features = ["full"] }
proc-macro2 = "1.0.0"
quote = "1.0.0"

[dev-dependencies]
enum-newtype = { path = ".." }
